Dodanie fragmentów do wyświetlania list

--- a/WydatkiBase/res/values/strings.xml
+++ b/WydatkiBase/res/values/strings.xml
@@ -2,4 +2,8 @@
 
     <string name="app_name">wydatkibase</string>
 
+    <string name="saldo">saldo</string>
+
+    <string name="add_new_object_btn">Dodaj nowy</string>
+
 </resources>
