--- a/WydatkiPhone/res/values/strings.xml
+++ b/WydatkiPhone/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="title_section1">Section 1</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="menu_edit_list">Zaznacz elementy</string>
     <string name="title_activity_object_manager">ObjectManager</string>
     <string name="title_activity_transaction">Nowa transakcja</string>
     <string name="income">wpływy</string>
